# MTMC-Temporal-Profiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codacy.yml
auto_analysis/: README.md  auto_analysis.py  auto_analysis_socialNetwork.py  requirements.txt
cpp/: BUILD  CMakeLists.txt  README  README.md  ebpf_common.h  ebpf_sampler.cpp  ebpf_sampler.h  env.h  exporter.cpp  exporter.h  guard_sampler.cpp  guard_sampler.h  mtmc_profiler.cpp  mtmc_profiler.h  mtmc_temp_profiler.h  perfmon_collector.cpp  perfmon_collector.h  perfmon_config.cpp  perfmon_config.h  util.cpp  util.h
cpp/OtlExportProxy/: CMakeLists.txt  FindThrift.cmake  opentele_exporter.cpp  opentele_exporter.h
cpp/tests/: CMakeLists.txt  README  README.md  dlrm_keras.pbtxt  mtmc_profiler_tests.cpp  mtmc_tf_tests.cpp  perfmon_tests.cpp  test_util.h
cpp/tests/configs/: example_cfg_mem.json  testing_config0.txt  testing_config1.txt  testing_config2.txt  testing_config3.txt  testing_config4.txt  testing_config5.txt  testing_config6.txt  testing_config7.txt
doc/: Install.md
doc/raw_log/: README.md
examples/cpp_example/: CMakeLists.txt  README.md  cpp_example.cpp  example_cfg_mem.json
examples/pytorch/: README.md  ipex-onednn-patch.txt  pytorch-onednn-patch.txt  pytorch-patch.txt
examples/pytorch/resnet/: README.md  pytorch-resnet.py
examples/tensorflow/: NonBlockingThreadPool.h  tensorflow_1_15up3.patch
examples/tensorflow/dlrm_example/: README.md  apply_mtmc.sh  eigen.patch  mtmc_tf115_build.patch  run_dlrm.sh
examples/tensorflow/dlrm_example/config_examples/: configExampleCaches.txt
post_processing/: config  configExampleFetchLatency  otl_post_processing.py  perf-script.py  perfmon_parser.py  post_processing.py  requirements.txt  setup.py  test.py  test_ebpf_mapper.py  tma_cal.py
scripts/: build_config.sh  cpp_tftest.sh  cpp_unittest.sh  mtmc_run.py  rebuild.sh
